Fixed some deprecation warnings. Removed some unused variables and code. Added a few inferred generic types where it was obvious. Fixed some improper static method usage. Added a few generated serialVersionUIDs in serializable classes.